# DeepSeek-AppForge

./: CHANGELOG.md  CONTRIBUTING.md  README.md  README_CN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
examples/: basic_usage.py
project-orchestrator/: .env.example  README.md  README_CN.md  config.py  cross_doc_checker.py  main.py  orchestrator.py  prefix_cache_utils.py  worker.py
skills/: api-contract-architect.md  api-contract-architect_cn.md  coding-standards.md  coding-standards_cn.md  db-schema-architect.md  mobile-architect.md  mobile-architect_cn.md  prd-expert.md  prd-expert_cn.md  product-researcher.md  project-orchestrator.md  project-orchestrator_cn.md  prompt-engineer.md  prompt-engineer_cn.md  task-decomposer.md  task-decomposer_cn.md  ux-designer.md  ux-designer_cn.md
src/agents/: _base.py  api_contract_architect.py  cli.py  coding_standards.py  db_schema_architect.py  mobile_architect.py  prd_expert.py  product_researcher.py  project_orchestrator.py  prompt_engineer.py  task_decomposer.py  ux_designer.py
