[project]
name = "deepseek-appforge"
version = "0.1.0"
description = "A collection of well-crafted AI agents powered by DeepSeek V4, callable from code or as AI agent skills."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agents = "agents.cli:main"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"agents" = "src/agents"
